--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,17 +4,9 @@ stages:
   - build
   - test
 
-variables:
-  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
-
-cache:
-  paths:
-    - .m2/repository/
-    - target/
-
 build:
   stage: build
   script:
     - wget https://github.com/dcdpr/libbech32-java/archive/master.zip && unzip master.zip && cd libbech32-java-master && mvn install -DskipTests=true && cd .. && rm master.zip 
     - wget https://github.com/dcdpr/libtxref-java/archive/master.zip && unzip master.zip && cd libtxref-java-master && mvn install -DskipTests=true && cd .. && rm master.zip 
-    - mvn $MAVEN_CLI_OPTS compile
+    - mvn compile
